--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -34,3 +34,8 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+          echo metrics testing
+
+      - name: Sleep for 2 minutes
+        run: |
+          sleep 120
